--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorRed">#FF0000</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorCream">#FFFDD0</color>
+    <color name="colorLightBlue">#add8e6</color>
+    <color name="colorDarkRed">#8b0000</color>
+    <color name="colorLightGreen">#90ee90</color>
 </resources>
