--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,4 +62,13 @@
         android:textColor="@color/colorBlack"
         android:textSize="25sp" />
 
+    <ImageView
+        android:id="@+id/toggle_choice_visibility"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/ic_eyeo" />
+
 </RelativeLayout>
