--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,9 +66,17 @@
         android:id="@+id/toggle_choice_visibility"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
+        android:layout_alignTop="@+id/add_activity"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
         android:src="@drawable/ic_eyeo" />
+
+    <ImageView
+        android:id="@+id/add_activity"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignEnd="@+id/flashcard_answer1"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/add" />
 
 </RelativeLayout>
