--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,8 +66,9 @@
         android:id="@+id/toggle_choice_visibility"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_alignTop="@+id/add_activity"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
         android:src="@drawable/ic_eyeo" />
 
     <ImageView
@@ -75,8 +76,15 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignEnd="@+id/flashcard_answer1"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="16dp"
+        android:layout_alignTop="@+id/toggle_choice_visibility"
         android:src="@drawable/add" />
+
+    <ImageView
+        android:id="@+id/edit_question"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignStart="@+id/flashcard_answer1"
+        android:layout_alignTop="@+id/toggle_choice_visibility"
+        android:src="@drawable/edit" />
 
 </RelativeLayout>
