--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -46,6 +46,7 @@
         android:layout_marginTop="113dp"
         android:ems="10"
         android:hint="Write correct answer here"
+        android:textColor="@color/colorPrimary"
         android:inputType="textMultiLine" />
 
     <EditText
@@ -57,6 +58,7 @@
         android:layout_marginTop="179dp"
         android:ems="10"
         android:hint="Write incorrect answer here"
+        android:textColor="@color/colorRed"
         android:inputType="textMultiLine" />
 
     <EditText
@@ -66,6 +68,7 @@
         android:layout_centerInParent="true"
         android:ems="10"
         android:hint="Write incorrect answer here"
+        android:textColor="@color/colorRed"
         android:inputType="textMultiLine" />
 
 </RelativeLayout>
