--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/flashcard_question"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="154dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/card_background"
@@ -70,6 +70,33 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:src="@drawable/ic_eyeo" />
+
+    <ImageView
+        android:id="@+id/next"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignEnd="@+id/flashcard_answer1"
+        android:layout_alignTop="@+id/back"
+        android:src="@drawable/next" />
+
+    <ImageView
+        android:id="@+id/back"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/flashcard_answer1"
+        android:layout_marginTop="171dp"
+        android:src="@drawable/back"
+        android:visibility="invisible" />
+
+    <ImageView
+        android:id="@+id/delete"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignTop="@+id/next"
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible"
+        android:src="@drawable/delete" />
 
     <ImageView
         android:id="@+id/add_activity"
